--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -17,6 +17,8 @@
 \usepackage{extarrows}
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 \definecolor{light-gray}{gray}{0.9}
+\usepackage{soul}
+\setulcolor{red}
 \usepackage{mathpazo}
 \usepackage{colortab}
 \usepackage{url}
@@ -60,7 +62,7 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
 \titlespacing*{\subsection}{0pt}{4pt}{2pt}
 \titlespacing*{\subsubsection}{0pt}{4pt}{2pt}
 \titlespacing*{\paragraph}{0pt}{4pt}{2pt}
-\setlength{\skip\footins}{3pt \plus 10px \minus 1px}
+\setlength{\skip\footins}{3pt plus 10px minus 5px}
 
 \usepackage[colorlinks=true,allcolors=blue,breaklinks,draft=false]{hyperref}   % hyperlinks, including DOIs and URLs in bibliography
 % known bug: http://tex.stackexchange.com/questions/1522/pdfendlink-ended-up-in-different-nesting-level-than-pdfstartlink
