--- a/formally.tex
+++ b/formally.tex
@@ -3,7 +3,7 @@
 The previous section introduced Hazelnut by example. In this section, we systematically introduce the following  structures:
 \begin{itemize}[itemsep=0px,partopsep=2px,topsep=2px]
 \item \textbf{H-types} and \textbf{H-expressions} (Sec. \ref{sec:holes}), which are types and expressions with {holes}. H-types classify H-expressions according to Hazelnut's \textbf{bidirectional static semantics}.
-\item \textbf{Z-expressions} and \textbf{Z-types} (Sec. \ref{sec:cursors}), which superimpose\- a \emph{cursor} onto H-expressions and H-types, respectively (following Huet's \emph{zipper pattern} \cite{JFP::Huet1997}.) Every Z-expression (resp. Z-type) corresponds to an H-expression (resp. H-type) by \emph{cursor erasure}.
+\item \textbf{Z-types} and \textbf{Z-expressions} (Sec. \ref{sec:cursors}), which superimpose\- a \emph{cursor} onto H-types and H-expressions, respectively (following Huet's \emph{zipper pattern} \cite{JFP::Huet1997}.) Every Z-type (resp. Z-expression) corresponds to an H-type (resp. H-expression) by \emph{cursor erasure}.
 \item \textbf{Actions} (Sec. \ref{sec:actions}), which act relative to the cursor according to Hazelnut's \textbf{bidirectional action semantics}. The action semantics enjoys a rich metatheory. Of particular note, the \emph{sensibility theorem} establishes that every edit state is well-typed after cursor erasure.
 \end{itemize}
 
@@ -12,9 +12,11 @@ Our overview below omits certain ``uninteresting'' details. The supplement inclu
 \subsection{H-types and H-expressions}\label{sec:holes}
 
 
-Figure \ref{fig:hexp-syntax} defines the syntax of H-types and H-expressions. Most forms correspond directly to those of the simply typed lambda calculus (STLC) extended with a single base type, $\tnum$, of numbers (cf. \cite{pfpl}.) The number expression corresponding to the mathematical number $n$ is drawn $\hnum{n}$, and for simplicity, we define only a single arithmetic operation, $\hadd{\hexp}{\hexp}$. The form $\hexp : \htau$ is an explicit \emph{type ascription}. 
+Figure \ref{fig:hexp-syntax} defines the syntax of H-types, $\htau$, and H-expressions, $\hexp$. Most forms correspond directly to those of the simply typed lambda calculus (STLC) extended with a single base type, $\tnum$, of numbers (cf. \cite{pfpl}.) The number expression corresponding to the mathematical number $n$ is drawn $\hnum{n}$, and for simplicity, we define only a single arithmetic operation, $\hadd{\hexp}{\hexp}$. The form $\hexp : \htau$ is an explicit \emph{type ascription}. 
 
-In addition to these standard forms, \emph{type holes} and \emph{empty expression holes} are both drawn $\hehole$ and \emph{non-empty expression holes} are drawn $\hhole{\hexp}$. We do not need non-empty type holes because every H-type is a valid classifier of H-expressions. Types and expressions that do not contain holes are \emph{complete types} and \emph{complete expressions}, respectively. Formally, we can derive $\hcomplete{\htau}$ when $\htau$ is complete, and $\hcomplete{\hexp}$ when $\hexp$ is complete (see supplement.) We are not concerned here with defining a dynamic semantics for Hazelnut, but the dynamics for complete H-expressions would be entirely standard (in Sec. \ref{sec:future} we discuss the multi-dimensional design space around the question of evaluating incomplete H-expressions.)% The complete types and expressions correspond immediately to the types and expressions of the STLC with numbers. %Holes mark subterms that are, notionally, ``under construction.'' We will see what this formally corresponds to in a moment.
+In addition to these standard forms, \emph{type holes} and \emph{empty expression holes} are both drawn $\hehole$ and \emph{non-empty expression holes} are drawn $\hhole{\hexp}$. We do not need non-empty type holes because every H-type is a valid classifier of H-expressions. 
+
+Types and expressions that contain no holes are \emph{complete types} and \emph{complete expressions}, respectively. Formally, we can derive $\hcomplete{\htau}$ when $\htau$ is complete, and $\hcomplete{\hexp}$ when $\hexp$ is complete (see supplement.) We are not concerned here with defining a dynamic semantics for Hazelnut, but the dynamics for complete H-expressions would be entirely standard (in Sec. \ref{sec:future} we discuss the multi-dimensional design space around the question of evaluating incomplete H-expressions.)% The complete types and expressions correspond immediately to the types and expressions of the STLC with numbers. %Holes mark subterms that are, notionally, ``under construction.'' We will see what this formally corresponds to in a moment.
 
 \begin{figure}[t]
 $\arraycolsep=4pt\begin{array}{lllllll}
@@ -202,7 +204,7 @@ $\arraycolsep=4pt\begin{array}{lllllll}
 \label{fig:ana-syn}
 \end{figure}
 
-The statics of Hazelnut is organized as a \emph{bidirectional type system} \cite{Pierce:2000:LTI:345099.345100,bidi-tutorial} around the two mutually defined judgements in Figure \ref{fig:ana-syn}. Typing contexts, $\hGamma$, map each variable $x \in \domof{\hGamma}$ to a hypothesis $x : \htau$ in the usual manner. We identify the context up to exchange and adopt the usual identification convention for structures that differ only up to alpha-equivalence. 
+Hazelnut's static semantics is organized as a \emph{bidirectional type system} \cite{Pierce:2000:LTI:345099.345100,bidi-tutorial} around the two mutually defined judgements in Figure \ref{fig:ana-syn}. Typing contexts, $\hGamma$, map each variable $x \in \domof{\hGamma}$ to a hypothesis $x : \htau$ in the usual manner. We identify the context up to exchange and adopt the standard identification convention for formal structures that differ only up to alpha-equivalence. 
 
 Derivations of the type analysis judgement, $\hana{\hGamma}{\hexp}{\htau}$, establish that $\hexp$ can appear where an expression of type $\htau$ is expected. Derivations of the type synthesis judgement, $\hsyn{\hGamma}{\hexp}{\htau}$, infer a type from $\hexp$, which is necessary in positions where an expected type is not available (e.g. at the top level.) Algorithmically, the type is an ``input'' of the type analysis judgement, but an ``output'' of the type synthesis judgement. %The rules describe a \emph{local type inference} scheme, i.e. type ascriptions are unnecessary when an expression is being analyzed against a known type.
 Making a judgemental distinction between these two notions will be essential in our action semantics (Sec. \ref{sec:actions}.)
@@ -216,7 +218,7 @@ Making a judgemental distinction between these two notions will be essential in 
 \begin{subequations}\label{rules:syn-ana}
 Type synthesis is stronger than type analysis in that if an expression is able to synthesize a type, it can also be analyzed against that type, or any other \emph{consistent} type, according to the \emph{subsumption rule}, Rule (\ref{rule:ana-subsume}).
 
-Figure \ref{fig:type-consistency} defines the \emph{H-type consistency judgement}, $\tcompat{\htau}{\htau'}$ as a reflexive and symmetric (but not transitive) relation between H-types. It coincides with equality for complete H-types. Two incomplete H-types are consistent if they differ only where a hole appears in either type. The type hole is therefore compatible with every type. This notion of H-type consistency coincides with the notion of type consistency that Siek and Taha discovered in their foundational work on gradual type systems, if we interpret the type hole as the $?$ type \cite{Siek06a}.\todo{fwd reference related work}
+The \emph{H-type consistency judgement}, $\tcompat{\htau}{\htau'}$, that appears as a premise in the subsumption rule is a reflexive and symmetric (but not transitive) relation between H-types defined judgementally in Figure \ref{fig:type-consistency}. This relation coincides with equality for complete H-types. Two incomplete H-types are consistent if they differ only at positions where a hole appears in either type. The type hole is therefore compatible with every type. This notion of H-type consistency coincides with the notion of type consistency that Siek and Taha discovered in their foundational work on gradual type systems, if we interpret the type hole as the $?$ (i.e. unknown) type \cite{Siek06a}.\todo{fwd reference related work}
 
 Rule (\ref{rule:syn-lam}) defines analysis for lambda abstractions, $\hlam{x}{\hexp}$. There is no type synthesis rule that applies to this form, so lambda abstractions can appear only in analytic position, i.e. where an expected type is known.\footnote{It is possible to also define a ``half-annotated'' synthetic lambda form, $\lambda x{:}\tau.e$, but for simplicity, we leave it out \cite{DBLP:conf/tldi/ChlipalaPH05}.} Rule (\ref{rule:syn-lam}) is not quite the standard rule, reproduced below:
 \begin{equation*}
@@ -226,7 +228,7 @@ Rule (\ref{rule:syn-lam}) defines analysis for lambda abstractions, $\hlam{x}{\h
   \hana{\hGamma}{\hlam{x}{\hexp}}{\tarr{\htau_1}{\htau_2}}
 }
 \end{equation*}
-The problem is that this standard rule alone leaves us unable to analyze lambda abstractions against the type hole, because the type hole is not immediately of the form $\tarr{\htau_1}{\htau_2}$. There are two possible solutions to this problem. One solution would be to define a second rule specifically for this case:
+The problem is that this standard rule alone leaves us unable to analyze lambda abstractions against the type hole, because the type hole is not immediately of the form $\tarr{\htau_1}{\htau_2}$. There are two plausible solutions to this problem. One solution would be to define a second rule specifically for this case:
 \begin{equation*}
 \inferrule{
   \hana{\hGamma, x : \tehole}{\hexp}{\tehole}
@@ -234,13 +236,13 @@ The problem is that this standard rule alone leaves us unable to analyze lambda 
   \hana{\hGamma}{\hlam{x}{\hexp}}{\tehole}
 }
 \end{equation*}
-Intead, we combine these two possible rules into a single rule through the simple auxiliary \emph{matched arrow type} judgement, $\arrmatch{\htau}{\tarr{\htau_1}{\htau_2}}$, defined in Figure \ref{fig:type-consistency}. This judgement leaves arrow types alone and assigns the arrow type $\tarr{\tehole}{\tehole}$ to the type hole. It is easy to see that the two rules above are admissible by appeal to Rule (\ref{rule:syn-lam}) and the matched arrow type judgement\todo{is admissible the right word}. Encouragingly, this judgement also arises in the study of gradual type systems\todo{first paper?}.
+Intead, we combine these two possible rules into a single rule through the simple auxiliary \emph{matched arrow type} judgement, $\arrmatch{\htau}{\tarr{\htau_1}{\htau_2}}$, defined in Figure \ref{fig:type-consistency}. This judgement leaves arrow types alone and assigns the type hole the matched arrow type $\tarr{\tehole}{\tehole}$. It is easy to see that the two rules above are admissible by appeal to Rule (\ref{rule:syn-lam}) and the matched arrow type judgement\todo{is admissible the right word}. Encouragingly, this judgement also arises in the study of gradual type systems\todo{first paper?}.
 
 Rule (\ref{rule:syn-asc}) defines type synthesis of expressions of ascription form, $\hexp : \htau$. This allows the user to explicitly state  a type for the ascribed expression to be analyzed against.
 
 Rule (\ref{rule:syn-var}) is the standard rule for variables. 
 
-Rule (\ref{rule:syn-ap}) is again nearly the standard rule for function application. It again makes use of the matched function type judgement to combine what would otherwise need to be two rules for function application -- one for when $e_1$ synthesizes an arrow type, and another for when $e_1$ synthesizes the type hole. Indeed, Siek and Taha needed two application rules for the same fundamental reason \cite{Siek06a}. Subsequent work on gradual typing introduced this notion of type matching\todo{cite}.
+Rule (\ref{rule:syn-ap}) is again nearly the standard rule for function application. It also makes use of the matched function type judgement to combine what would otherwise need to be two rules for function application -- one for when $e_1$ synthesizes an arrow type, and another for when $e_1$ synthesizes the type hole. Indeed, Siek and Taha needed two application rules for the same fundamental reason \cite{Siek06a}. Subsequent work on gradual typing introduced this notion of type matching\todo{cite}.
 
 Rule (\ref{rule:syn-num}) states that numbers synthesize the $\tnum$ type. Rule (\ref{rule:syn-plus}) states that $\hexp_1 + \hexp_2$ behaves like a function over numbers. 
 
@@ -291,36 +293,39 @@ Given these rules, it is instructive to derive the following (by subsumption):
 % The hole type behaves much like the type $?$ in prior work by Siek and Taha on gradual types for functional languages \cite{Siek06a}. Their system (which was not bidirectionally typed nor an editor model) also needed to define two rules for function application. In general, when a premise requires that a synthesized type be of a particular form, we need a special case where the synthesized hole type is treated instead as if it were the ``holey-est'' type of that form.\footnote{Alternatively, we might add a rule that allows expressions that synthesize hole type to then non-deterministically synthesize any other type, but maintaining determinism is useful in practice, so we avoid this approach.}
 
 \end{subequations}
-\subsection{Z-expressions and Z-types}\label{sec:cursors}
+\subsection{Z-types and Z-expressions}\label{sec:cursors}
+\newcommand{\cvert}{{\hspace{1.8px}{\vert}\hspace{1.8px}}}
 \begin{figure}[t]
 \hspace{-3px}$\arraycolsep=2pt\begin{array}{lllllll}
 \mathsf{ZTyp} & \ztau & ::= &
   %\zlsel{\htau} ~\vert~
-  \zwsel{\htau} ~\vert~
+  \zwsel{\htau} \cvert
   %\zrsel{\htau} ~\vert~
-  \tarr{\ztau}{\htau} ~\vert~
+  \tarr{\ztau}{\htau} \cvert
   \tarr{\htau}{\ztau} \\
 \mathsf{ZExp} & \zexp & ::= &
   %\zlsel{\hexp} ~\vert~
-  \zwsel{\hexp} ~\vert~
+  \zwsel{\hexp} \cvert
   %\zrsel{\hexp} ~\vert~
-  \zexp : \htau ~\vert~
-  \hexp : \ztau ~\vert~
-  \hlam{x}{\zexp} ~\vert~
-  \hap{\zexp}{\hexp} ~\vert~
-  \hap{\hexp}{\zexp} ~\vert~
-  \hadd{\zexp}{\hexp} ~\vert~
-  \hadd{\hexp}{\zexp} ~\vert~
+  \zexp : \htau \cvert
+  \hexp : \ztau \cvert
+  \hlam{x}{\zexp} \cvert
+  \hap{\zexp}{\hexp} \cvert
+  \hap{\hexp}{\zexp} \cvert
+  \hadd{\zexp}{\hexp} \cvert
+  \hadd{\hexp}{\zexp} \cvert
   \hhole{\zexp}
 \end{array}$
 %\textbf{Sort} & & & \textbf{Operational Form} & \textbf{Stylized Form} & \textbf{Description}\\
-\caption{Syntax of Z-types and Z-expressions, i.e. types and expressions with holes and a single focus.}
+\caption{Syntax of Z-types and Z-expressions.}
 \label{fig:zexp-syntax}
 \end{figure}
 
-In order to identify a single subtree of an H-type or H-expression as the current focus of action, we apply Huet's \emph{zipper pattern} \cite{JFP::Huet1997}. The syntax of Z-types, $\ztau$, and Z-expressions, $\zexp$, is given in Figure \ref{fig:zexp-syntax}. The only base cases in these inductive grammars are $\zwsel{\htau}$ and $\zwsel{\hexp}$, which identify the H-type or H-expression that is the current focus. All other forms correspond to the recursive forms in the syntax of H-types and H-expressions, and contain exactly one ``hatted'' subterm that identifies the subtree where the focus will be found. All other sub-terms are H-types or H-expressions. Taken together, every syntactically well-formed Z-type and Z-expression contains exactly one focused H-type or H-expression.
+Hazelnut's action semantics operates over Z-types, $\ztau$, and Z-expressions, $\zexp$. Figure \ref{fig:zexp-syntax} defines the syntax of Z-types and Z-expressions. A Z-type (resp. Z-expression) represents an H-type (resp. H-expression) with a single superimposed \emph{cursor}.
 
-We write $\removeSel{\ztau}$ for the H-type constructed by removing the focus marker from the Z-type $\ztau$. This straightforward metafunction is defined as follows:
+The only base cases in these inductive grammars are $\zwsel{\htau}$ and $\zwsel{\hexp}$, which identify the H-type or H-expression that the cursor is on. All of the other forms correspond to the recursive forms in the syntax of H-types and H-expressions, and contain exactly one ``hatted'' subterm that identifies the subtree where the cursor will be found. Any other subterm is ``dotted'', i.e. it is either an H-type or H-expression. Taken together, every Z-type and Z-expression contains exactly one cursor by construction. This can be understood as an instance of Huet's \emph{zipper pattern} \cite{JFP::Huet1997} (which, coincidentally, Huet encountered while implementing a structure editor.)
+
+We write $\removeSel{\ztau}$ for the H-type constructed by erasing the cursor from $\ztau$, which we refer to as the \emph{cursor erasure} of $\ztau$. This straightforward metafunction is defined as follows:
 \begin{align*}
 %\removeSel{(\zlsel{\htau})} & = \htau\\
 \removeSel{(\zwsel{\htau})} & = \htau\\
@@ -329,14 +334,14 @@ We write $\removeSel{\ztau}$ for the H-type constructed by removing the focus ma
 \removeSel{(\tarr{\htau}{\ztau})} & = \tarr{\htau}{\removeSel{\ztau}}
 \end{align*}
 
-Similarly, we write $\removeSel{\zexp}$ for the H-expression constructed by removing the focus marker from the Z-expression $\zexp$. The definition of this metafunction is analagous, so we leave it in the appendix for concision.
+Similarly, we write $\removeSel{\zexp}$ for the H-expression constructed by erasing the cursor from the Z-expression $\zexp$, i.e. the \emph{cursor erasure} of $\zexp$. The definition of this metafunction is analogous, so we omit it for concision (see supplement.)
 % \begin{align*}
 % %\removeSel{(\zlsel{\hexp})} & = \hexp\\
 % \removeSel{(\zwsel{\hexp})} & = \hexp\\
 % %\removeSel{(\zrsel{\hexp})} & = \hexp\\
 % \removeSel{(\zexp : \htau)} & = \removeSel{\zexp} : \htau\\
 % \removeSel{(\hexp : \ztau)} & = \hexp : \removeSel{\ztau}\\
-% \removeSel{(\hlam{x}{\zexp})} & = \hlam{x}{\removeSel{\zexp}}\\
+% \removeSel{(\hlam{x}{\zexp})} & = \hlam{x}{\removeSel{\zexp}}\\ogoo
 % \removeSel{(\hap{\zexp}{\hexp})} & = \hap{\removeSel{\zexp}}{\hexp}\\
 % \removeSel{(\hap{\hexp}{\zexp})} & = \hap{\hexp}{\removeSel{\zexp}}\\
 % \removeSel{(\hadd{\zexp}{\hexp})} & = \hadd{\removeSel{\zexp}}{\hexp}\\
